<resources>
    <string name="app_name">Helper Happy</string>
    <string name="phone_number_otp">PHONE_NUMBER</string>
    <string name="giam_ho">Người thân</string>
    <string name="theo_doi">Thành viên</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="phan_hoi">Phản hồi</string>
    <string name="sos">SOS</string>
    <string name="channel_name">Helper App</string>
    <string name="channel_description">Channel DS</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="xin_chao">Xin chào!</string>
    <string name="mat_khau_err">Mật khẩu không hợp lệ</string>
    <string name="dang_nhap">ĐĂNG NHẬP</string>
    <string name="thoat_tk">Thoát Tài Khoản</string>
    <string name="quen_mk">Quên mật khẩu</string>
    <string name="non_empty">Vui lòng nhập đầy dủ dữ liệu</string>
    <string name="tiep_tuc">TIẾP TỤC</string>
    <string name="doi_sdt">Đổi SĐT</string>
    <string name="gui_lai_otp">Gửi lại OTP</string>
    <string name="otp_err">Mã xác thực không hợp lệ</string>
    <string name="ma_xac_thuc">Mã xác thực</string>
    <string name="title_otp_activity">Nhập mã xác thực 6 số được gửi đến</string>
    <string name="xac_thuc_otp">Xác thực OTP</string>
    <string name="thong_tin_hien_thi">Thông tin hiển thị</string>
    <string name="ho_ten">Họ tên</string>
    <string name="mat_khau_6_so">Mật khẩu gồm 6 số</string>
    <string name="hoan_thanh">HOÀN THÀNH</string>
    <string name="them_nguoi_than">Thêm người thân</string>
    <string name="them_thanh_vien">Thêm thành viên</string>
    <string name="sdt_not_found">Số điện thoại không tồn tại</string>
    <string name="them">THÊM</string>
    <string name="huy">HỦY</string>
    <string name="dang_goi">Đang gọi</string>
    <string name="dong">Đóng</string>
    <string name="goi_lai">Gọi lại</string>
    <string name="danh_sach_theo_doi">DANH SÁCH THÀNH VIÊN</string>
    <string name="nhan_xem_chi_tiet">Nhấn để xem chi tiết từng người</string>
    <string name="giam_ho_list">DANH SÁCH NGƯỜI THÂN</string>
    <string name="nhan_giu_keo_tha_xem_chi_tiet">Nhấn giữ + kéo thả để thay đổi thứ tự ưu tiên</string>
    <string name="lich_su_di_chuyen">LỊCH SỬ DI CHUYỂN</string>
    <string name="vi_tru_hien_tai">VỊ TRÍ HIỆN TẠI</string>
    <string name="dia_dien_quen_thuoc">ĐỊA ĐIỂM QUEN THUỘC</string>
    <string name="chon_chuc_nang">CHỌN CHỨC NĂNG</string>
    <string name="nhan_de_chon_ngay">Nhấn vào để chọn ngày</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="map_tong_quat">MAP TỔNG QUÁT</string>
    <string name="xac_nhan_thay_doi">Xác nhận thay đổi</string>
    <string name="xoa">Xóa</string>
    <string name="nhap_day_du_du_lieu">Vui lòng nhập đầy đủ dữ liệu!!!</string>
    <string name="mat_khau_hien_tai_sai">Mật khẩu hiện tại không đúng!!!</string>
    <string name="mat_khau_6_ky_tu">Mật khẩu mới phải đủ 6 ký tự!!!</string>
    <string name="trung_mat_khau">Mật khẩu mới không được trùng mật khẩu hiện tại!</string>
    <string name="danh_sach_trong">Danh sách trống</string>
    <string name="nhan_giu_xoa">Nhấn giữ để xóa thành viên</string>
</resources>