<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="8dp"
    android:paddingTop="15dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/iv_priority"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dang_goi"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_status"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="15sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="15sp"
        android:textStyle="bold|italic" />

    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="8dp">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/cpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="45"
            app:indicatorColor="#EDEDED"
            app:indicatorSize="130dp"
            app:trackColor="#EDEDED"
            app:trackCornerRadius="20dp"
            app:trackThickness="6dp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/teal_700"
            android:textSize="25sp"
            android:textStyle="bold"
            app:showAnimationBehavior="inward" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fl"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@color/black"
            android:backgroundTint="@color/yellow"
            android:text="@string/dong"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_re_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="7"
            android:background="@color/black"
            android:backgroundTint="@color/teal_700"
            android:text="@string/goi_lai"
            android:textColor="@color/white"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>