<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Followed.FollowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:onClick="goHome"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_home_24"
                tools:ignore="OnClick" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_map_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/yellow"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danh_sach_theo_doi"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nhấn vào đây để xem MAP tổng quát"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </LinearLayout>


        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ln_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nhan_xem_chi_tiet"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nhan_giu_xoa"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_empty_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/gray_light"
            android:paddingVertical="10dp"
            android:text="@string/danh_sach_trong"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rl_pbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_pbar"
            android:elevation="8dp"
            android:padding="8dp"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="24dp"
                android:layout_height="24dp" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/rd_g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bt_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="2dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/chon_chuc_nang"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_down_up"
                android:contentDescription="@string/app_name"
                android:onClick="onHideBottomSheet"
                android:padding="10dp"
                tools:ignore="OnClick" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_add_fav"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_nature_people_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/dia_dien_quen_thuoc"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_down_up"
                android:backgroundTint="@color/yellow"
                android:contentDescription="@string/app_name"
                android:rotation="270" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_light" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_add_history"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_history_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/lich_su_di_chuyen"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_down_up"
                android:backgroundTint="@color/yellow"
                android:contentDescription="@string/app_name"
                android:rotation="270" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_light" />
        </RelativeLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>