<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Followed.HistoryMoveActivity">

    <RelativeLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingVertical="3dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_down_up"
            android:backgroundTint="@color/gray"
            android:contentDescription="@string/app_name"
            android:onClick="back"
            android:padding="5dp"
            android:rotation="90"
            tools:ignore="OnClick" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/lich_su_di_chuyen"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_top"
        tools:ignore="FragmentTagUsage" />

    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_top"
        android:background="@color/yellow"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_horizontal"
        android:onClick="dateSelect"
        android:orientation="vertical"
        android:padding="5dp"
        tools:ignore="OnClick">


        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nhan_de_chon_ngay"
            android:textColor="@color/white"
            android:textStyle="italic" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_top"
        android:background="@drawable/bg_location_draw"
        android:padding="7dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_route" />

        <LinearLayout
            android:id="@+id/ll_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chọn"
                android:textColor="@color/yellow"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:text="5"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="điểm trên bản đồ"
                android:textColor="@color/yellow"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_text"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="5dp"
                android:text="@string/huy"
                android:textAllCaps="true"
                android:textColor="@color/yellow"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="5dp"
                android:text="@string/xac_nhan"
                android:textAllCaps="true"
                android:textColor="@color/yellow"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        app:fab_addButtonColorNormal="@color/yellow"
        app:fab_expandDirection="up"
        app:fab_labelStyle="@style/LabelStyle"
        app:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/white"
            app:fab_icon="@drawable/ic_location_notification_on"
            app:fab_size="mini"
            app:fab_title="Thông báo: BẬT" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/white"
            app:fab_icon="@drawable/ic_location_draw"
            app:fab_size="mini"
            app:fab_title="Khoanh vùng" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</RelativeLayout>